shared-core-rs/bindings/swift/hyperwhisper_coreFFI.h

uint16_t uniffi_hyperwhisper_core_checksum_func_elevenlabs_parse_transcribe_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_english_spelling_from_raw(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_extract_cleaned_from_wrapped(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_finalize_streaming_text(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_gemini_build_delete_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_gemini_build_generate_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_gemini_build_poll_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_gemini_build_prompt(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_gemini_build_upload_bytes_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_gemini_build_upload_start_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_gemini_parse_generate_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_gemini_parse_poll_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_gemini_parse_upload_bytes_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_gemini_parse_upload_start_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_google_chirp_build_transcribe_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_google_chirp_parse_transcribe_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_grok_build_transcribe_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_grok_parse_transcribe_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_groq_build_transcribe_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_groq_parse_transcribe_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_hw_cloud_health_default(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_hyperwhisper_cloud_build_transcribe_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_hyperwhisper_cloud_parse_credits_remaining(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_hyperwhisper_cloud_parse_credits_used(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_hyperwhisper_cloud_parse_transcribe_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_is_retryable(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_build_validate_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_cached_status_within_grace(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_can_download_model(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_can_start_recording(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_check_limits(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_clear_stored_license(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_default_daily_limit_debug(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_default_daily_limit_release(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_default_model_limit(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_empty_key_outcome(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_http_error_outcome(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_limits_defaults(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_offline_fallback_outcome(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_offline_grace_secs(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_parse_validate_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_record_model_download(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_record_usage(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_remote_override_if_fresh(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_remote_override_ttl_secs(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_should_revalidate(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_store_license_key(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_store_remote_override(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_stored_license_key(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_update_validation_cache(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_validate_url(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_license_validation_cache_secs(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_macos_settings_to_universal_settings_json(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_migrate_cloud_accuracy_tier(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_migrate_cloud_pp_model(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_mistral_build_transcribe_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_mistral_parse_transcribe_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_models_available_via_hw_cloud(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_models_language_support(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_models_supports_custom_vocabulary(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_next_retry(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_normalize_backup_json(void
    
);