shared-core-rs/bindings/csharp/hyperwhisper_core.cs


    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_elevenlabs_parse_transcribe_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_english_spelling_from_raw(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_extract_cleaned_from_wrapped(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_finalize_streaming_text(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_gemini_build_delete_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_gemini_build_generate_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_gemini_build_poll_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_gemini_build_prompt(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_gemini_build_upload_bytes_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_gemini_build_upload_start_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_gemini_parse_generate_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_gemini_parse_poll_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_gemini_parse_upload_bytes_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_gemini_parse_upload_start_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_google_chirp_build_transcribe_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_google_chirp_parse_transcribe_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_grok_build_transcribe_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_grok_parse_transcribe_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_groq_build_transcribe_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_groq_parse_transcribe_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_hw_cloud_health_default(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_hyperwhisper_cloud_build_transcribe_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_hyperwhisper_cloud_parse_credits_remaining(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_hyperwhisper_cloud_parse_credits_used(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_hyperwhisper_cloud_parse_transcribe_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_is_retryable(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_build_validate_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_cached_status_within_grace(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_can_download_model(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_can_start_recording(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_check_limits(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_clear_stored_license(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_default_daily_limit_debug(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_default_daily_limit_release(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_default_model_limit(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_empty_key_outcome(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_http_error_outcome(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_limits_defaults(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_offline_fallback_outcome(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_offline_grace_secs(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_parse_validate_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_record_model_download(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_record_usage(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_remote_override_if_fresh(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_remote_override_ttl_secs(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_should_revalidate(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_store_license_key(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_store_remote_override(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_stored_license_key(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_update_validation_cache(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_validate_url(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_license_validation_cache_secs(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_macos_settings_to_universal_settings_json(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_migrate_cloud_accuracy_tier(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_migrate_cloud_pp_model(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_mistral_build_transcribe_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_mistral_parse_transcribe_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_models_available_via_hw_cloud(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_models_language_support(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_models_supports_custom_vocabulary(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_next_retry(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_normalize_backup_json(
    );
